# SCD-OpenStack-Utils

./: .gitignore  .pylintrc  README.md  getter.py  groups.txt  index.yaml  migrate.py  openstack-ad-migrate.py
.github/: CODEOWNERS
AQZombieFinder/: aq_zombie_finder.py  readme.txt
Alertmanager/: silence-alerts.sh
DNSEntryChecker/: dns_entry_checker.py
MonitoringTools/: .coveragerc  .pylintrc  pytest.ini  requirements.txt
OpenStack-AD-Migrate/: openstack-ad-migrate.py
OpenStack-Rabbit-Consumer/: .dockerignore  .gitignore  .pylintrc  Dockerfile  OpenRabbit_Consumer-1.0.0-1.x86_64.rpm  README.MD  consumer.cfg  consumer.ini  consumer.ini.dev  consumer.ini.prod  consumer.py  dependecies.txt  dev.env  docker-compose.yml  entrypoint.py  fpm command.txt  notes.txt  prod.env  readme  requirements.txt
OpenStack-accounting/: nova_extract_accounting.py  nova_get_accounting_data.sql  readme.md  requirements.txt
OpenStack-nova-accounting/: extract_accounting.py  now-accounting.sh  past-accounting.sh
Openstack-VM-Creation-Script/: utest_vm_creations.py  vm_creation_v2.py
Openstack_create_hv_all_aggregates/: hv_creation_script.py
Pynetbox_Data_Uploader/: .pylintrc  pytest.ini  requirements.txt  scratch_3.py  setup.py
Weekly-Reporting/: README.md  data.yaml  export.py  format_raw_data.py  report.sh  requirements.txt
aq_zombie_finder/: aq_zombie_finder.py  readme.txt
capi_image_builder/: .pylintrc  args.py  main.py  requirements.txt
chatops_deployment/: .gitignore  README.md  init.sh  run.sh
cloud_chatops/: .gitignore  .pylintrc  Dockerfile  README.md  main.py  (+7 more)
iriscasttools/: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py
iriscasttools/iriscasttools/: __init__.py  __main__.py  main.py  stats.py  utils.py
iriscasttools/iriscasttools/iriscasttools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
iriscasttools/test/: test_main.py  test_stats.py  test_utils.py
iriscasttools/test/test_data/: raw_ipmi_test_exp_vals.csv
iriscasttools/tests/: test_stats.py  test_utils.py
(+519 files in other folders)
